@@ -1,3 +1,9 @@
+Mon Apr 12 18:15:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ciao/Servants/Servant_Impl_Base.cpp:
+        * ciao/Servants/Servant_Impl_Base.h:
+          Reworked consumer table to work with LwCCM
+
 Mon Apr 12 17:48:31 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ciao/Servants/Connector_Servant_Impl_Base.cpp:
